fixed overflows, minor sidebar tweaks

--- a/src/css/algolia/_variables.scss
+++ b/src/css/algolia/_variables.scss
@@ -6,7 +6,7 @@ $searchbox-config: (
 	border-radius: 4px,
 	input-border-color: transparent,
 	input-focus-border-color: #5ca8f5,
-	input-background: rgba(#FFFFFF,.1),
+	input-background: rgba(#31384f,1),
 	input-focus-background: rgba(#FFFFFF,1),
 	font-size: 14px,
 	placeholder-color: rgba(#FFF, .3),
