--- a/src/css/layouts/_docs.scss
+++ b/src/css/layouts/_docs.scss
@@ -125,16 +125,30 @@ $sidebarWidth: 230px;
 .docs {
 
   &__search {
-    padding: 10px;
+    padding: 0 10px;
+    &--compact {
+      // padding: 0;
+      
+      .searchbox__input {
+        // border: 0 !important;
+        // border-radius: 0 !important;
+        padding-left: 15px;
+        font-size: 13px;
+      }
+    }
   }
 
   &__logo {
+    background-color: rgba(#c0e0ff, 0.05);
+    box-shadow: -6px 5px 5px 5px rgba(#1d243b,.2),
+    inset 0 -5px 2px 0 rgba(#c0e0ff,.01);
+    padding: 15px 0;
     &__home {
       color: rgba(#fff, 0.6);
       font-size: 12px;
       // font-weight: 700;
       letter-spacing: 0.04em;
-      padding: 30px 25px 0;
+      padding: 25px 25px 0;
 
       img {
         opacity: 0.6;
@@ -143,7 +157,7 @@ $sidebarWidth: 230px;
     }
 
     &__title {
-      padding: 0 25px 15px;
+      padding: 0 25px 25px;
       font-family: "Roboto", serif;
       color: rgba(#fff, 1);
       text-shadow: 1px 1px 1px rgba($lc_color_dark_blue, .6);
@@ -166,6 +180,8 @@ $sidebarWidth: 230px;
 
   &__sidebar-nav {
     padding: 0 0 20px;
+    overflow-y: auto;
+    height: 100%;
   }
   
   &__sidebar-button {
@@ -196,9 +212,6 @@ $sidebarWidth: 230px;
     // display: none;
     z-index: 999;
     transition: left .1s ease-in-out;
-    overflow-x: visible !important;
-    display: flex;
-    flex-direction: column;
 
     &--hidden {
       left: -$sidebarWidth !important;
@@ -234,6 +247,7 @@ $sidebarWidth: 230px;
   }
 
   &__toc {
+    margin-top: 10px;
     &__ul {
       list-style-type: none;
       margin: 0;
@@ -345,7 +359,7 @@ $sidebarWidth: 230px;
       }
       &--active {
         max-height: 100vh;
-        background-color: darken(#31384f, 5%);
+        background-color: darken(#31384f, 3%);
       }
     }
 
